--- a/abstrak/abstrak-en.tex
+++ b/abstrak/abstrak-en.tex
@@ -31,7 +31,7 @@ Computing resources such as computers are not always in use or in idle
 position. This can lead to computing resources waste. To prevent that,
 a mechanism is needed to utilize these resources  by renting out the
 idle resources to users in need. One of the tools that can be used is Kubernetes.
-However, using Kubernetes usually requires fix amount of resources. In this study,
+However, Kubernetes usually requires fix amount of resources. In this study,
 we propose a Kubernetes provisioning system in the form of virtual cluster. Virtual
 cluster is an approach that allows computing resources to be provided on-demand. In
 addition, multi-tenancy will also be implemented so that computing resources that are
