--- a/bab/1-pendahuluan.tex
+++ b/bab/1-pendahuluan.tex
@@ -82,10 +82,9 @@ Batasan-batasan dari penelitian atau implementasi adalah sebagai berikut:
 \section{Tujuan}
 \label{sec:Tujuan}
 
-Tujuan dari implementasi ini adalah untuk mengembangkan sistem \emph{provisioning}
-yang dapat membuat VM dan secara otomatis tergabung ke dalam sebuah \emph{virtual cluster}
-Kubernetes secara dinamis sesuai dengan kriteria
-\emph{resource} permintaan pengguna.
+Tujuan dari implementasi ini adalah untuk mengembangkan sistem \emph{provisioning virtual cluster}
+dengan cara membuat VM dan secara otomatis tergabung ke dalam sebuah \emph{virtual cluster}
+Kubernetes sesuai dengan kriteria \emph{resource} permintaan pengguna.
 
 \section{Manfaat}
 \label{sec:sistematikapenulisan}
