--- a/bab/3-metodologi.tex
+++ b/bab/3-metodologi.tex
@@ -910,14 +910,14 @@ dan \ref{fig:dashboard-with-node}.
 
 \begin{figure}[H]
   \centering
-  \fbox{\includegraphics[scale=0.3]{gambar/dashboard-with-node.png}}
+  \fbox{\includegraphics[scale=0.3]{gambar/final-fe.png}}
   \caption{Tampilan \emph{Dashboard}}
   \label{fig:dashboard-with-node}
 \end{figure}
 
 Pada contoh gambar \ref{fig:dashboard-with-node}, terdapat satu komputer \emph{worker}
-yang siap untuk menerima permintaan, yaitu komputer yang memiliki \emph{hostname} hudson dan alamat
-ip 10.125.155.249.
+yang siap untuk menerima permintaan, yaitu komputer yang memiliki \emph{hostname} rpl-1 dan alamat
+ip 10.21.73.107.
 
 % TODO: implementasi backend
 \subsection{Implementasi \emph{Backend}}
