--- a/lainnya/kata-pengantar.tex
+++ b/lainnya/kata-pengantar.tex
@@ -18,11 +18,13 @@ Oleh karena itu, penulis mengucapkan terima kasih kepada:
 \begin{enumerate}[nolistsep]
 
   \item Bapak Royyana Muslim Ijtihadie, S.Kom., M.Kom., Ph.D. selaku dosen pembimbing
-    utama penulis dan Bapak Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D. selaku dosen
+    pertama penulis dan Bapak Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D. selaku dosen
     pembimbing kedua penulis yang telah membantu penulis dalam menyelesaikan Tugas Akhir.
 
-  \item Keluarga penulis, Ibu penulis, Bapak penulis dan dua Saudara penulis yang telah 
-    memberikan dukungan kepada penulis.
+  \item Bapak 
+
+  \item Bapak Agung Budi Cahyono dan Ibu Isti Purwaningsih beserta dua saudara penulis
+    yang telah memberikan dukungan kepada penulis.
 
   % \item Teman-teman "\emph{Backstreet Boys}"
     
