--- a/lainnya/lembar-pengesahan.tex
+++ b/lainnya/lembar-pengesahan.tex
@@ -35,29 +35,29 @@
 
 \noindent
 \begin{tabularx}{\textwidth}{X l}
-  \advisor{}               & (Pembimbing I)                      \\
-  NIP: \advisornip{}       &                                     \\
-                           & ................................... \\
-                           &                                     \\
-                           &                                     \\
-  \coadvisor{}             & (Pembimbing II)                     \\
-  NIP: \coadvisornip{}     &                                     \\
-                           & ................................... \\
-                           &                                     \\
-                           &                                     \\
-  \examinerone{}.          & (Penguji I)                         \\
-  NIP: \examineronenip{}   &                                     \\
-                           & ................................... \\
-                           &                                     \\
-                           &                                     \\
-  \examinertwo{}.          & (Penguji II)                        \\
-  NIP: \examinertwonip{}   &                                     \\
-                           & ................................... \\
-                           &                                     \\
-                           &                                     \\
-  \examinerthree{}.        & (Penguji III)                       \\
-  NIP: \examinerthreenip{} &                                     \\
-                           & ................................... \\
+  \advisor{}               & (Pembimbing I)   \\
+  NIP: \advisornip{}       &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
+  \coadvisor{}             & (Pembimbing II)  \\
+  NIP: \coadvisornip{}     &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
+  \examinerone{}           & (Penguji I)      \\
+  NIP: \examineronenip{}   &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
+  \examinertwo{}           & (Penguji II)     \\
+  NIP: \examinertwonip{}   &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
+                           &                  \\
 \end{tabularx}
 \endgroup
 
