--- a/main.tex
+++ b/main.tex
@@ -244,7 +244,7 @@
 \listoftables
 \cleardoublepage
 
-\renewcommand*\lstlistlistingname{DAFTAR KODE SUMBER}
+\renewcommand*\lstlistlistingname{DAFTAR KODE SUMBER DAN KODE PERINTAH}
 \phantomsection
 \addcontentsline{toc}{chapter}{\lstlistlistingname}
 \lstlistoflistings
