--- a/pustaka/variables.tex
+++ b/pustaka/variables.tex
@@ -6,9 +6,8 @@
 \newcommand{\nickname}{Elon}
 \newcommand{\advisor}{Royyana Muslim Ijtihadie, S.Kom., M.Kom., Ph.D.}
 \newcommand{\coadvisor}{Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D.}
-\newcommand{\examinerone}{Dr. Galileo Galilei, S.T., M.Sc}
-\newcommand{\examinertwo}{Friedrich Nietzsche, S.T., M.Sc}
-\newcommand{\examinerthree}{Alan Turing, ST., MT}
+\newcommand{\examinerone}{Dr. Eng. Radityo Anggoro, S.Kom., M.Sc.}
+\newcommand{\examinertwo}{Baskoro Adi Pratomo, S.Kom., M.Kom., Ph.D.}
 \newcommand{\headofdepartment}{Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D.}
 
   % Dosen Pembimbing&:& 1. Royyana Muslim Ijtihadie, S.Kom., M.Kom., Ph.D.\\
@@ -17,8 +16,8 @@
 \newcommand{\nrp}{5025211123}
 \newcommand{\advisornip}{19770824 200304 1 001}
 \newcommand{\coadvisornip}{19810620 200501 1 003}
-\newcommand{\examineronenip}{18560710 194301 1 001}
-\newcommand{\examinertwonip}{18560710 194301 1 001}
+\newcommand{\examineronenip}{19841016 200812 1 002}
+\newcommand{\examinertwonip}{19870218 201404 1 001}
 \newcommand{\examinerthreenip}{18560710 194301 1 001}
 \newcommand{\headofdepartmentnip}{19810620 200501 1 003}
 
