--- a/sampul/konten-id.tex
+++ b/sampul/konten-id.tex
@@ -24,6 +24,12 @@
   \textmd{Dosen Pembimbing} \\
   \advisor{} \\
   \textmd{NIP \advisornip{}} \\
+\end{large}
+
+\vspace{10mm}
+
+\begin{large}
+  \textmd{Dosen Ko-pembimbing} \\
   \coadvisor{} \\
   \textmd{NIP \coadvisornip{}}
 \end{large}
