--- a/main.tex
+++ b/main.tex
@@ -273,6 +273,10 @@
 \input{bab/5-penutup.tex}
 \cleardoublepage
 
+% lampiran
+\input{bab/6-lampiran.tex}
+\cleardoublepage
+
 \chapter*{DAFTAR PUSTAKA}
 \addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
 \renewcommand\refname{}
